异步生成二维码，并写死容器高度，防止 popup 不完整。

--- a/popup.css
+++ b/popup.css
@@ -9,10 +9,14 @@
 
 body {
     background: #fff;
+    width: 210px;
+    height: 210px;
 }
 
 body #content {
     position: relative;
+    width: 210px;
+    height: 210px;
 }
 
 body #content #qr {
